--- a/src/edelta/bpr/rayjp.ipynb
+++ b/src/edelta/bpr/rayjp.ipynb
@@ -11,8 +11,7 @@
     "import pandas as pd\n",
     "import ray\n",
     "from basefunc import genbasis_df, get_test_data_df, index_csum\n",
-    "from genericray import *\n",
-    "from sklearn.linear_model import BayesianRidge"
+    "from genericray import *"
    ]
   },
   {
